# unit_track_content_changes

./: .pre-commit-config.yaml  .vimrc  .vimspector.json  README.md  pyproject.toml
history/docx_content/: HSE - hazard_communication.txt  HSE - hoists.txt  HSE - light plants.txt  HSE - pipe_tongs_and_lines.txt
history/docx_content_history/content_2025-04-01_18-59-05/: HSE - bloodborne_pathogen_exposure_control.txt  HSE - blowout_prevention_equipment.txt  HSE - cpr_and_first_aid_preparedness.txt  HSE - emergency_response_plan.txt  HSE - fire_prevention_and_control.txt  HSE - forklifts_and_mobile_elevated_work_platforms.txt  HSE - general_fleet_safety.txt  HSE - hoists.txt  HSE - hot_work.txt  HSE - incident_investigation.txt  HSE - job_safety_analysis.txt  HSE - ladder_safety.txt  HSE - life_threatening_weather.txt  HSE - lockout_tagout.txt  HSE - manual_handling.txt  HSE - mud_pumps_and_equipment.txt  HSE - new_employee_and_visitor_orientation.txt  HSE - personal_protective_equipment.txt  HSE - pipe_racks_and_bins.txt  HSE - safety_meetings.txt  HSE - safety_signs.txt  HSE - stop_work_authority.txt  HSE - working_at_height.txt
history/docx_content_history/content_2025-04-01_19-08-20/: HSE - cpr_and_first_aid_preparedness.txt  HSE - fire_prevention_and_control.txt  HSE - forklifts_and_mobile_elevated_work_platforms.txt  HSE - ladder_safety.txt  (+3 more)
output/: changelog.txt  monthly_training_videos_required_in_net
src/unit_track_content_changes/: __init__.py  find_qualified.py  parse_changelog_and_create_report.py  update_content_dir.py
tests/: __init__.py  conftest.py
(+140 files in other folders)
